Rules grid scrollbar added and fixed width

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -72,6 +72,6 @@ input {
 }
 
 .width-200-300 {
-    min-width: 200px;
+    min-width: 230px;
     max-width: 300px;
 }
